public/css: Prevent displayed long durations being partially overlapped

--- a/src/assets/public/css/player.css
+++ b/src/assets/public/css/player.css
@@ -68,7 +68,7 @@
 }
 
 .player .track-time > span {
-	width: 32px;
+	width: 46px;
 	flex-shrink: 0;
 	text-align: center;
 }
@@ -104,7 +104,7 @@
 }
 
 .player-volume > span {
-	width: 32px;
+	width: 46px;
 	text-align: center;
 	flex-shrink: 0;
 }
